--- a/src/net40/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
+++ b/src/net40/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
@@ -47,10 +47,27 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Radical, Version=1.5.2.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.1.5.2.1\lib\net40\Radical.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows, Version=1.3.16.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net40\Radical.Windows.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows.Presentation, Version=1.10.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.Presentation.1.10.3.1\lib\net40\Radical.Windows.Presentation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net40\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,9 +77,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\lib\Radical.AssemblyInfo.cs">
-      <Link>Properties\Radical.AssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="Boot\InjectViewInRegionFacility.cs" />
     <Compile Include="Boot\Installers\ServicesInstaller.cs" />
     <Compile Include="Boot\Installers\PresentationInstaller.cs" />
@@ -85,20 +99,6 @@
     <Compile Include="Services\ComponentReleaser.cs" />
     <Compile Include="Tracing.cs" />
     <Compile Include="Windsor\ContainerExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Radical.Windows.Presentation\Radical.Windows.Presentation.csproj">
-      <Project>{591AD4DF-2FAD-4451-8A8A-5EF36ED2A2AC}</Project>
-      <Name>Radical.Windows.Presentation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical.Windows\Radical.Windows.csproj">
-      <Project>{8AD2DC17-392C-4BBE-B34B-11A3ACB9DC86}</Project>
-      <Name>Radical.Windows</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical\Radical.csproj">
-      <Project>{B48B5BEC-DE0F-4310-9A36-FF9C07D77ACF}</Project>
-      <Name>Radical</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
