--- a/src/net40/Radical.Windows.Presentation.CastleWindsor/packages.config
+++ b/src/net40/Radical.Windows.Presentation.CastleWindsor/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="Castle.Core" version="3.3.1" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net40" />
+  <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net40" />
+  <package id="Radical" version="1.5.2.1" targetFramework="net40" />
+  <package id="Radical.Windows" version="1.3.16.0" targetFramework="net40" />
+  <package id="Radical.Windows.Presentation" version="1.10.3.1" targetFramework="net40" />
 </packages>
