--- a/src/net40/Test.Radical.Windows.Presentation.CastleWindsor/Test.Radical.Windows.Presentation.CastleWindsor.csproj
+++ b/src/net40/Test.Radical.Windows.Presentation.CastleWindsor/Test.Radical.Windows.Presentation.CastleWindsor.csproj
@@ -42,6 +42,18 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="Radical, Version=1.5.2.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.1.5.2.1\lib\net40\Radical.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows, Version=1.3.16.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net40\Radical.Windows.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows.Presentation, Version=1.10.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.Presentation.1.10.3.1\lib\net40\Radical.Windows.Presentation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Rhino.Mocks">
       <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
@@ -52,6 +64,12 @@
       <HintPath>..\..\packages\SharpTestsEx.1.1.1\lib\SharpTestsEx.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net40\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
@@ -78,18 +96,6 @@
     <ProjectReference Include="..\Radical.Windows.Presentation.CastleWindsor\Radical.Windows.Presentation.CastleWindsor.csproj">
       <Project>{e72f0df7-1725-4f64-aaff-00208cd7553e}</Project>
       <Name>Radical.Windows.Presentation.CastleWindsor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical.Windows.Presentation\Radical.Windows.Presentation.csproj">
-      <Project>{591ad4df-2fad-4451-8a8a-5ef36ed2a2ac}</Project>
-      <Name>Radical.Windows.Presentation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical.Windows\Radical.Windows.csproj">
-      <Project>{8ad2dc17-392c-4bbe-b34b-11a3acb9dc86}</Project>
-      <Name>Radical.Windows</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical\Radical.csproj">
-      <Project>{b48b5bec-de0f-4310-9a36-ff9c07d77acf}</Project>
-      <Name>Radical</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
