--- a/src/net45/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
+++ b/src/net45/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
@@ -50,10 +50,27 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Radical, Version=1.5.2.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.1.5.2.1\lib\net45\Radical.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows, Version=1.3.16.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net45\Radical.Windows.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Radical.Windows.Presentation, Version=1.10.3.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.Presentation.1.10.3.1\lib\net45\Radical.Windows.Presentation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.Windows.1.3.16.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -63,9 +80,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\lib\Radical.AssemblyInfo.cs">
-      <Link>Properties\Radical.AssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="..\..\net40\Radical.Windows.Presentation.CastleWindsor\Boot\InjectViewInRegionFacility.cs">
       <Link>Boot\InjectViewInRegionFacility.cs</Link>
     </Compile>
@@ -132,20 +146,6 @@
     <Compile Include="..\..\net40\Radical.Windows.Presentation.CastleWindsor\Windsor\ContainerExtensions.cs">
       <Link>Windsor\ContainerExtensions.cs</Link>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Radical.Windows.Presentation\Radical.Windows.Presentation.csproj">
-      <Project>{767fad7d-a6cf-426e-ac34-6ea187c76ff9}</Project>
-      <Name>Radical.Windows.Presentation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical.Windows\Radical.Windows.csproj">
-      <Project>{135504b6-2a47-4e30-994e-60bc49477091}</Project>
-      <Name>Radical.Windows</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Radical\Radical.csproj">
-      <Project>{db4e99f1-3cbe-4e76-9197-d6f884a0f618}</Project>
-      <Name>Radical</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
