--- a/src/nuget/Radical.Windows.Presentation.CastleWindsor.nuspec
+++ b/src/nuget/Radical.Windows.Presentation.CastleWindsor.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Radical.Windows.Presentation.CastleWindsor</id>
     <title>Radical Windows Presentation CastleWindsor</title>
-    <version>1.4.0.0</version>
+    <version>$version$</version>
     <authors>Mauro Servienti, Enos Recanati, Michael Denny</authors>
     <owners>radical,mauroservienti</owners>
     <licenseUrl>https://github.com/RadicalFx/radical/blob/master/license.md</licenseUrl>
@@ -20,6 +20,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\build\$configuration$\radical.windows.Presentation.CastleWindsor\lib\" target="lib\" />
+    <file src="..\build\$configuration$\radical.windows.Presentation.CastleWindsor\lib\" target="lib\" />
   </files>
 </package>
