run build version script from radical.build repo

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,12 @@
     - develop
   configuration: Debug
   platform: Any CPU
+  environment:
+    use_build_number_in_packages: true
   cache:
   - src\packages -> src\**\packages.config
   install:
-  - ps: .\appveyor-buildversion.ps1
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/RadicalFx/Radical.Build/master/appveyor-buildversion.ps1'))
   assembly_info:
     patch: true
     file: '**\AssemblyInfo.*'
@@ -26,11 +28,6 @@
   after_build:
   - md "src\build\nuget"
   - nuget pack "src\nuget\Radical.Windows.Presentation.CastleWindsor.nuspec" -Version "%package_version%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-  test:
-    categories:
-      except:
-      - ObjectDumper
-      - AsyncWorker
   artifacts:
   - path: src\build\Debug
   - path: src\build\nuget\*.nupkg
@@ -53,7 +50,7 @@
   cache:
   - src\packages -> src\**\packages.config
   install:
-  - ps: .\appveyor-buildversion.ps1
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/RadicalFx/Radical.Build/master/appveyor-buildversion.ps1'))
   assembly_info:
     patch: true
     file: '**\AssemblyInfo.*'
@@ -68,10 +65,6 @@
   after_build:
   - md "src\build\nuget"
   - nuget pack "src\nuget\Radical.Windows.Presentation.CastleWindsor.nuspec" -Version "%package_version%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-  test:
-    categories:
-      except:
-      - ObjectDumper
   artifacts:
   - path: src\build\Release
   - path: src\build\nuget\*.nupkg
