Adding NuGet public feed

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,6 +74,6 @@
   - path: src\build\nuget\*.nupkg
   deploy:
   - provider: Environment
-    name: MyGet feed
+    name: NuGet public feed
     on:
       branch: master
