--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 #     DEVELOPMENT BRANCH
 #
 # build in Debug mode and deploy to MyGet.org as pre-release
-- version: 1.4.1+{build}
+- version: 1.4.1-develop+{build}
   branches:
     only:
     - develop
