--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,9 +28,6 @@
     - md "src\build\nuget"
     - nuget pack "src\nuget\Radical.Windows.Presentation.CastleWindsor.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
 
-#  pull_requests:
-#    do_not_increment_build_number: true
-
   test:
     categories:
       except:
@@ -72,9 +69,6 @@
     - md "src\build\nuget"
     - nuget pack "src\nuget\Radical.Windows.Presentation.CastleWindsor.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
 
-#  pull_requests:
-#    do_not_increment_build_number: true
-
   test:
     categories:
       except:
@@ -86,3 +80,12 @@
     name: NuGet public feed
     on:
       branch: master
+  - provider: GitHub    
+    release: %GitVersion_NuGetVersion%
+    description: 'Release %GitVersion_NuGetVersion%'
+    auth_token:
+      secure: 2ijF4OfPYfIUTunubL/Z04ogADL9sx/gKW1jMRNJnAa1OpHZpSvCKmP0gvNs8C7h
+    artifact: /.*\.nupkg/, src\build\Release.zip
+    on:
+      branch: master
+      appveyor_repo_tag: true
