--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,7 +81,7 @@
     on:
       branch: master
   - provider: GitHub    
-    release: %GitVersion_NuGetVersion%
+    release: '%GitVersion_NuGetVersion%'
     description: 'Release %GitVersion_NuGetVersion%'
     auth_token:
       secure: 2ijF4OfPYfIUTunubL/Z04ogADL9sx/gKW1jMRNJnAa1OpHZpSvCKmP0gvNs8C7h
