--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,8 +1,22 @@
 version: 1
 update_configs:
+
+# master
   - package_manager: "dotnet:nuget"
     directory: "/src"
     update_schedule: "live"
+    target_branch: master
   - package_manager: "dotnet:nuget"
     directory: "/targets"
     update_schedule: "live"
+    target_branch: master
+
+# release-2.0
+  - package_manager: "dotnet:nuget"
+    directory: "/src"
+    update_schedule: "live"
+    target_branch: release-2.0
+  - package_manager: "dotnet:nuget"
+    directory: "/targets"
+    update_schedule: "live"
+    target_branch: release-2.0
