--- a/src/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
+++ b/src/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
@@ -33,8 +33,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.4.0" />
-    <PackageReference Include="Castle.Windsor" Version="5.0.0" />
+    <PackageReference Include="Castle.Core" Version="[4.4.0,5.0.0)" />
+    <PackageReference Include="Castle.Windsor" Version="[5.0.0,6.0.0)" />
     <PackageReference Include="Expression.Blend.Sdk" Version="[1.0.2]" />
     <PackageReference Include="Radical.Windows.Presentation" Version="1.11.0" />
     <PackageReference Include="MinVer" Version="1.1.0">
