--- a/src/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
+++ b/src/Radical.Windows.Presentation.CastleWindsor/Radical.Windows.Presentation.CastleWindsor.csproj
@@ -41,6 +41,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Reflection.Metadata" Version="5.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
